examples/errors/parsing/booleans-single-amp.cn
main : () [impure] =
  let a = true & false;
  ()
